# coremlir

./: .gitignore  CMakeLists.txt  Dockerfile  PATCH-D80358.diff  README.md  entrypoint.sh  proposals.md
core2MLIR/: .gitignore  CHANGELOG.md  Core2MLIR.cabal  Main.hs  README.md  core2MLIR.cabal  foo.hs  matmul-mlir.hs
docs/: index.html
ghc-benchmarks/: .gitignore  arith-expr.cpp  arith-expr.hs  incr-incr.cpp  incr-incr.md  makefile  matmul.hs  print-lazy-and-strict.hs  repeated-incr-maybe-recursive.cpp  repeated-incr-maybe-recursive.hs  repeated-incr-maybe-recursive.org  repeated-incr-maybe.cpp  repeated-incr-maybe.hs  repeated-incr-maybe.org  sum.hs
ghc-dump/: .gitignore  1-TEST.sh  COMMIT  fibraw.hs  makefile
hask-opt/: CMakeLists.txt  Interpreter.cpp  Runtime.cpp  hask-opt.cpp
hask98/: CMakeLists.txt  main.cpp
include/: Interpreter.h  Runtime.h
lib/: CMakeLists.txt
nofib/: COMMIT
reading/: ghc-demand-analyzer.md  makefile  notes-projections-for-strictness-analysis-wadler.md  notes-theory-and-practice-of-demand-analysis-in-haskell.md  sep-24-worker-wrapper-sketch.md  sep-30-worker-wrapper.cpp  sep-30-worker-wrapper.org
standalone-opt/: standalone-opt.cpp
test/: .gitignore  CMakeLists.txt  add-roundtrip.mlir  add.mlir  case-int-roundtrip.mlir  case-int.mlir  case-of-boxed-reucrsive-ap-with-final-construct.mlir  case-usage-roundtrip.mlir  case-usage.mlir  either-roundtrip.mlir  either.mlir  fib-anf.mlir  fib-coreprep-encoded.mlir  fib-encoded-roundtrip.mlir  fib-encoded.mlir  fib-ideal-written.mlir  fib-roundtrip.mlir  fib-strict-coreprep-encoded.mlir  fib-strict-roundtrip.mlir  fib-strict.mlir  fib.mlir  fibanf.mlir  (+19 more)
(+79 files in other folders)
